--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# YAML Version: v1.0.6
+# YAML Version: v1.0.7
 
 version: '3.7'
 
@@ -23,7 +23,7 @@ services:
         constraints:
           - node.role == manager
   helloworld:
-    image: tutum/hello-world:latest
+    image: perfectpattern/hello-world-webservice:v1.0.0
     networks:
      - pib-net
     deploy:
